<resources>
    <string name="app_name">Gameverse</string>
    <string name="ok">Ok</string>
    <string name="cancelar">Cancelar</string>
    <string name="confirmacion">¿Quieres eliminar la siguiente publicación?</string>
    <string name="titulo">Titulo</string>
    <string name="descripci_n">Descripción</string>
    <string name="escribe_aqu">Escribe Aquí</string>
    <string name="plataforma">Plataforma</string>
    <string name="xbox">Xbox</string>
    <string name="playstation">PlayStation</string>
    <string name="nintendo">Nintendo</string>
    <string name="genero">Genero</string>
    <string name="subir">Subir</string>
    <string name="archivo_imagen_o_video">Archivo (Imagen o Video)</string>
    <string name="max_35">Max: 35</string>
    <string name="max_500">Max: 500</string>
    <string name="inicio_de_sesi_n">Inicio de sesión</string>
    <string name="nombre_de_usuario">Nombre de usuario o correo electrónico</string>
    <string name="contra">Contraseña</string>
    <string name="iniciar">Iniciar</string>
    <string name="se_le_olvido">¿Se le olvido la contraseña?</string>
    <string name="eres_nuevo">¿Eres nuevo?</string>
    <string name="registrar">Registrar</string>
    <string name="recuperacion">Recuperación de contraseña</string>
    <string name="correo">Correo electrónico</string>
    <string name="recuperar">Recuperar</string>
    <string name="confirmar_contra">Confirmar contraseña</string>
    <string name="confirmar">Confirmar</string>
    <string name="crear_perfil">Crear perfil</string>
    <string name="nombre">Nombre de usuario</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="mis_publicaciones">Mis publicaciones</string>
    <string name="grupos">Mis grupos</string>
    <string name="crear">Crear</string>
    <string name="configuracion_de_usuario">Configuración de usuario</string>
    <string name="cambiar_datos">Cambiar datos</string>
    <string name="cambiar_correo_electronico">Cambiar correo electrónico</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="modificar_contrase_a">Modificar contraseña</string>
    <string name="publicaciones">Publicaciones</string>
    <string name="comentarios">Comentarios</string>
    <string name="comentar_aqu">Comentar Aquí</string>
    <string name="publicar">Publicar</string>
    <string name="confirmar_contrase_a">Confirmar contraseña</string>
    <string name="informacion">Información</string>
    <string name="cambiar_correo">Cambiar correo electrónico</string>
    <string name="buscador">Buscador</string>
    <string name="seleccion">Selección de búsqueda</string>
    <string name="gruposbuscar">Grupos</string>
    <string name="perfiles">Perfiles</string>
    <string name="filtro_de_plataforma">Filtro de plataforma</string>
    <string name="buscar">Buscar</string>
    <string name="videojuego_favorito">Videojuego Favorito</string>
    <string-array name="genero">
        <item></item>
        <item>Acción</item>
        <item>Plataforma</item>
        <item>Carreras</item>
        <item>Deportes</item>
        <item>Peleas</item>
        <item>Puzzle</item>
        <item>Shooter</item>
        <item>RPG</item>
        <item>Terror</item>
        <item>Otro</item>
    </string-array>
</resources>